Fixed the alignment on the diamond symbol on chips

--- a/app/assets/stylesheets/modules/abstract/_chip_stack-defs.sass
+++ b/app/assets/stylesheets/modules/abstract/_chip_stack-defs.sass
@@ -71,7 +71,7 @@ $chip_stack_diameter-without_border: $chip_stack_diameter - 2 * $l-raisedBorder-
   .diamond_symbol
     @extend .suit_symbol
 
-    top: $horizontal_aligned_symbol_top
+    top: $horizontal_aligned_symbol_top - 2px
     left: 0
     font-size: $suit_symbol_font_size + 3
 
